change link with changename github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Birious.github.io/portfolio",
+  "homepage": "https://Valentin-Morette.github.io/portfolio",
   "name": "portfolioreact",
   "version": "0.1.0",
   "private": true,
